# Main

./: .env.example  .eslintcache  .eslintignore  .eslintignore.bak  .eslintrc.js  .eslintrc.js.bak  .gdignore  .gitignore  .gitlab-ci.yml  .prettierrc  README.md  any-errors.json  clean-node-modules.ps1  cleanup-mcp.sh  code-guidelines.md  cspell.json  custom.d.ts  electron.d.ts  error.html  eslint.config.js  eslint.config.mjs  index.html  install-vscode-mcp.sh  jest.config.js  jest.setup.js  main.cjs  main.js  mcp-server.js  mcp.json  module-audit-report.json  next-sitemap.config.js  next.config.cjs  next.config.js  next.config.mjs  oftWindowsStart MenuProgramsCloudflare  package-lock.json  package.json  preload.js  run-dev.bat  start-dev.ps1  (+4 more)
.eslint-cache/: auto-fix-results.json
native-modules/: Cargo.toml  build.rs  typing_stats_native.node
native-modules/src/: lib.rs
native-modules/src/ffi/: memory.rs  mod.rs
native-modules/src/gpu/: accelerator.rs  context.rs  contexts.rs  mod.rs  settings.rs  shader.rs  types.rs
native-modules/src/gpu/computation/: data.rs  image.rs  matrix.rs  mod.rs  pattern.rs  text.rs  typing.rs
native-modules/src/memory/: analyzer.rs  gc.rs  info.rs  mod.rs  optimizer.rs  pool.rs  settings.rs  types.rs
native-modules/src/utils/: mod.rs
native-modules/src/worker/: mod.rs  pool.rs  task.rs
src-tauri/: Cargo.toml  tauri.conf.json  typing_data.json
src-tauri/migrations/: 001_initial_schema.sql  002_add_current_user.sql
src-tauri/src/: browser_detector.rs  config.rs  crypto_utils.rs  decryption.rs  dynamic_analysis.rs  error.rs  file_operations.rs  lib.rs  main.rs  progress_manager.rs  theme.rs  types.rs  user_detection.rs
src-tauri/src/commands/: auth.rs  docs.rs  misc.rs  search.rs  user.rs
src-tauri/src/components/: error_message.rs  mod.rs  sidebar.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/analysis/: dynamic_analysis.rs  mod.rs  progress_manager.rs
src-tauri/src/core/decryption/: kakao_decrypt.rs  mod.rs
src-tauri/src/core/file_ops/: mod.rs  search_kakao_files.rs  user_detection.rs  user_detection_mod.rs
src-tauri/src/database/: connection.rs  document_operations.rs  history_operations.rs  mod.rs  models.rs  summary_operations.rs  user_operations.rs
src-tauri/src/google/: auth.rs  docs.rs  mod.rs
src-tauri/src/shared/error/: mod.rs
src-tauri/src/shared/types/: mod.rs
(+534 files in other folders)
