[package]
name = "typing-stats-native"
version = "0.1.0"
edition = "2021"
description = "Native modules for typing statistics app"
authors = ["Author <author@example.com>"]
license = "MIT"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2.12.2"
napi-derive = "2.12.2"
once_cell = "1.18.0"
parking_lot = "0.12.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.31.0", features = ["full"] }
wgpu = { version = "0.17.0", features = ["serde"] }
async-std = "1.12.0"
bytemuck = { version = "1.14.0", features = ["derive"] }
libc = "0.2.148"
num_cpus = "1.16.0"
rustc_version_runtime = "0.2.1"
env_logger = "0.10.0"
log = "0.4.20"
rayon = "1.7.0"
pollster = "0.3.0"  # 추가: pollster 의존성

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi", "psapi", "memoryapi"] }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.15.1"

[build-dependencies]
napi-build = "2.0.1"

[features]
default = ["gpu-compute", "memory-optimization", "worker-threads"]
gpu-compute = []
memory-optimization = []
worker-threads = []
advanced-analytics = []
use-winapi = [] # Windows API 사용 기능 추가

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = "symbols"
panic = "abort"
